--- a/src/app/page/Calendar/Calendar.html
+++ b/src/app/page/Calendar/Calendar.html
@@ -1,6 +1,7 @@
 <app-navbar></app-navbar>
 <!-- <app-searchbar></app-searchbar> -->
+ <!-- <app-reactivesubmitform></app-reactivesubmitform> -->
 <div class="calendar-container">
     <full-calendar [options]="calendarOptions"></full-calendar>
     <!-- <app-searchbar>/<app-searchbar> -->
-</div>
+    </div>
