--- a/src/app/page/settings/settings.html
+++ b/src/app/page/settings/settings.html
@@ -1,2 +1,11 @@
-<app-colorpicker-component></app-colorpicker-component>
-<!-- <app-customers></app-customers> -->
+<div class="layout">
+  <aside class="sidebar">
+    <app-navbar></app-navbar>
+  </aside>
+
+  <main class="main-content">
+    <header class="header">
+      <app-breadcrumbs></app-breadcrumbs>
+    </header>
+  </main>
+</div>
