--- a/src/app/components/calendar/calendar.scss
+++ b/src/app/components/calendar/calendar.scss
@@ -1,19 +1,19 @@
 .card {
-  background: rgba(228, 227, 227, 0.88);
+  background: rgba(237, 236, 236, 0.88);
   backdrop-filter: blur(8px);
   border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 10px rgba(222, 36, 36, 0.12);
   padding: 0.75rem;         /* reduced from 1.5rem */
   margin: 0.5rem auto;      /* reduced from 1rem */
   width: 100%;
   max-width: 500px;         /* reduced from 700px */
-  color: #2d3748;
+  color: #073b94;
   position: relative;
   overflow: hidden;
   transition: transform 0.15s ease, box-shadow 0.15s ease;
 }
 
-.card:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-}
+// .card:hover {
+//   transform: translateY(-2px);
+//   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+// }
