--- a/src/app/page/reports/reports.html
+++ b/src/app/page/reports/reports.html
@@ -1,3 +1,1 @@
-<!-- <div class="card">
-    <p-chart type="bar" [data]="data" [options]="options" class="h-[30rem]" />
-</div> -->
+<app-geomaps></app-geomaps>
