The third time im  uploading with the some additions

--- a/src/app/page/Dashboard/dashboard.html
+++ b/src/app/page/Dashboard/dashboard.html
@@ -66,6 +66,10 @@
         <h3>Upload Summary</h3>
         <app-upload></app-upload>
       </div>
+         <div class="chart-card">
+        <h3>Upload Summary</h3>
+        <app-upload></app-upload>
+      </div>
     </section>
 
     <!-- Line Chart -->
