--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 @use '@angular/material' as mat;
+@use "tailwindcss";
+@plugin "daisyui";
 // @use '@nebular/theme/styles/theming' as *;
 // @use '@nebular/theme/styles/themes/dark' as dark;
 
