This is my 28/10/2025

--- a/src/app/page/Dashboard/dashboard.scss
+++ b/src/app/page/Dashboard/dashboard.scss
@@ -264,3 +264,9 @@ app-calendar {
     grid-template-columns: 1fr;
   }
 }
+
+  .regions_div{
+      width: 100%;
+      height: 300px;
+      background-color: bisque;
+  }
