--- a/src/app/page/messages/messages.html
+++ b/src/app/page/messages/messages.html
@@ -1,8 +1,17 @@
 <div class="home-container">
-    <!-- Background Image -->
-    <img src="https://images8.alphacoders.com/721/721311.jpg" alt="Mountain" class="bg-image" />
+  <!-- Sidebar / Navbar -->
+  <div class="navbar-wrapper">
+    <app-navbar></app-navbar>
+  </div>
 
-    <!-- Navbar / Sidebar -->
-    <div class="navbar-wrapper">
-        <app-navbar></app-navbar>
+  <!-- Main Content Area -->
+  <div class="main-content">
+    <div class="statswithimages">
+      <app-statswithimages></app-statswithimages>
     </div>
+
+    <div class="timelinebydaisy">
+      <app-timelinebydaisy></app-timelinebydaisy>
+    </div>
+  </div>
+</div>
