--- a/src/app/page/Dashboard/dashboard.html
+++ b/src/app/page/Dashboard/dashboard.html
@@ -1,3 +1,4 @@
+
 <div class="calendar-container">
   <!-- Sidebar -->
   <aside class="navbar-wrapper">
@@ -14,8 +15,6 @@
         <app-header></app-header>
       </div>
     </section>
-
-
 
     <!-- Metrics Section -->
     <section class="metrics-section">
@@ -36,8 +35,9 @@
     <!-- Calendar & Leaderboard -->
     <section class="calendar-leaderboard-section">
         <div class="chart-card">
-        <h3>Calendar</h3>
-        <app-calendar></app-calendar>
+        <h3>Reach</h3>
+        <!-- <app-geomaps></app-geomaps> -->
+        <div id="regions_div" style="width: 100%; height: 200px;"></div>
       </div>
 
       <!-- Leaderboard -->
@@ -66,10 +66,6 @@
         <h3>Upload Summary</h3>
         <app-upload></app-upload>
       </div>
-         <div class="chart-card">
-        <h3>Upload Summary</h3>
-        <app-upload></app-upload>
-      </div>
     </section>
 
     <!-- Line Chart -->
@@ -79,3 +75,5 @@
     </section>
   </main>
 </div>
+
+<div id="regions_div" style="width: 100%; height: 200px;"></div>
